J'ai mis un joli panneau

--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
     <button id="run"><i class="fas fa-running"></i></button>
 </div>
 
+<!-- Overlay d'information (affiché lors du focus sur le panneau) -->
+<div id="infoOverlay" class="hidden">
+    <div class="overlayContent">
+        <h2>Informations sur le panneau</h2>
+        <p>Insérez ici vos informations (texte, images, liens, etc.).</p>
+        <a href="https://exemple.com" target="_blank">Lien vers plus d'infos</a>
+        <button id="closeOverlay">Fermer</button>
+    </div>
+</div>
+
+
 
 <!-- Le canvas de Three.js sera ajouté dynamiquement -->
 <!-- Chargement de Three.js via CDN -->
