--- a/index.html
+++ b/index.html
@@ -5,21 +5,32 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 </head>
 <body>
 
-<!-- Inclure Font Awesome via CDN -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-
-<div id="mobile-controls">
-    <button id="left"><i class="fas fa-arrow-left"></i></button>
-    <button id="right"><i class="fas fa-arrow-right"></i></button>
-    <button id="jump"><i class="fas fa-arrow-up"></i></button>
-    <button id="run"><i class="fas fa-running"></i></button>
+<!-- Loader -->
+<div id="loader">
+    <div class="spinner"></div>
+    <p>Chargement...</p>
 </div>
 
-<!-- Overlay d'information (affiché lors du focus sur le panneau) -->
+<!-- Page d'accueil avec particules en fond -->
+<div id="landingPage">
+    <!-- Conteneur pour les particules (uniquement sur la page d'accueil) -->
+    <div id="particles-js"></div>
+
+    <!-- Contenu de la page d'accueil -->
+    <div class="landingContent">
+        <h1 id="welcomeTitle">Bonjour, bienvenue sur mon portfolio !</h1>
+        <p>
+            Ici, tu vas parcourir un chemin retraçant mon parcours, mes expériences et mes projets. Ce site te plonge dans un univers 3D où chaque recoin raconte un bout de mon histoire.
+            Prêt(e) à entrer dans l'aventure ? Clique sur le bouton ci-dessous pour découvrir tout ce qui t'attend !
+        </p>
+        <button id="enterSite">Entrer</button>
+    </div>
+</div>
+
+<!-- Overlay d'information -->
 <div id="infoOverlay" class="hidden">
     <div class="overlayContent">
         <h2>Informations sur le panneau</h2>
@@ -29,22 +40,46 @@
     </div>
 </div>
 
+<!-- Mobile controls -->
+<div id="mobile-controls">
+    <button id="left"><i class="fas fa-arrow-left"></i></button>
+    <button id="right"><i class="fas fa-arrow-right"></i></button>
+    <button id="jump"><i class="fas fa-arrow-up"></i></button>
+    <button id="run"><i class="fas fa-running"></i></button>
+</div>
 
-
-<!-- Le canvas de Three.js sera ajouté dynamiquement -->
-<!-- Chargement de Three.js via CDN -->
+<!-- Chargement de Three.js et autres scripts -->
 <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
-
-<!-- Scripts de post-traitement -->
 <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/EffectComposer.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/RenderPass.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/shaders/CopyShader.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/ShaderPass.js"></script>
-<!-- Ajoutez ici le BokehShader -->
 <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/shaders/BokehShader.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/BokehPass.js"></script>
 
+<!-- Chargement local de particles.js -->
+<script src="js/particles.js"></script>
+<script>
+    // Charger la configuration de particles.js depuis "asset/particles.json"
+    particlesJS.load('particles-js', 'asset/particles.json', function() {
+        console.log('callback - particles.js config loaded');
+    });
+
+    // Masquer la page d'accueil lorsque l'utilisateur clique sur "Entrer"
+    document.getElementById('enterSite').addEventListener('click', function() {
+        document.getElementById('landingPage').classList.add('hidden');
+    });
+
+    // Une fois que tout est chargé, masque le loader
+    window.addEventListener("load", function() {
+        document.getElementById('loader').classList.add('hidden');
+    });
+</script>
+
 <script src="js/main.js"></script>
+
+<!-- Inclure Font Awesome via CDN -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 </body>
 </html>
