--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 </head>
 <body>
 
+<!-- Menu de navigation (responsive) -->
+<nav id="menu">
+    <ul>
+        <li data-destination="home">Accueil</li>
+        <li data-destination="about">À propos</li>
+        <li data-destination="projects">Projets</li>
+        <li data-destination="contact">Contact</li>
+    </ul>
+</nav>
+
+
 <!-- Loader -->
 <div id="loader">
     <div class="spinner"></div>
@@ -30,13 +41,51 @@
     </div>
 </div>
 
-<!-- Overlay d'information -->
-<div id="infoOverlay" class="hidden">
+<!-- Supprime l'ancien #infoOverlay -->
+<!-- Ajoute ces nouveaux blocs -->
+<div id="overlay-home" class="overlay hidden">
     <div class="overlayContent">
-        <h2>Informations sur le panneau</h2>
-        <p>Insérez ici vos informations (texte, images, liens, etc.).</p>
-        <a href="https://exemple.com" target="_blank">Lien vers plus d'infos</a>
-        <button id="closeOverlay">Fermer</button>
+        <h2>Accueil</h2>
+        <p>Bienvenue sur mon portfolio ! Explorez mon univers en 3D.</p>
+        <a href="#" target="_blank">En savoir plus</a>
+        <button class="closeOverlay">Fermer</button>
+    </div>
+</div>
+
+<div id="overlay-about" class="overlay hidden">
+    <div class="overlayContent">
+        <h2>À propos</h2>
+        <p>Je suis un développeur passionné par le web et les jeux.</p>
+        <a href="https://exemple.com/about" target="_blank">Mon parcours</a>
+        <button class="closeOverlay">Fermer</button>
+    </div>
+</div>
+
+<div id="overlay-projects" class="overlay hidden">
+    <div class="overlayContent">
+        <h2>Projets</h2>
+        <p>Voici quelques-unes de mes créations.</p>
+        <img src="asset/images/projet1.jpg" alt="Projet 1" style="max-width: 100%;">
+        <a href="https://exemple.com/projects" target="_blank">Voir les projets</a>
+        <button class="closeOverlay">Fermer</button>
+    </div>
+</div>
+
+<div id="overlay-contact" class="overlay hidden">
+    <div class="overlayContent">
+        <h2>Contact</h2>
+        <p>Envoyez-moi un message pour collaborer !</p>
+        <a href="mailto:exemple@email.com">Me contacter</a>
+        <button class="closeOverlay">Fermer</button>
+    </div>
+</div>
+
+<!-- Bloc pour le panneau 'sign' (optionnel, si tu veux le garder distinct) -->
+<div id="overlay-sign" class="overlay hidden">
+    <div class="overlayContent">
+        <h2>Panneau Principal</h2>
+        <p>Informations sur ce panneau spécial.</p>
+        <button class="closeOverlay">Fermer</button>
     </div>
 </div>
 
@@ -57,6 +106,7 @@
 <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/ShaderPass.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/shaders/BokehShader.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/BokehPass.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.umd.js"></script>
 
 <!-- Chargement local de particles.js -->
 <script src="js/particles.js"></script>
