Menu mieux, et teleport avec des particules

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 </head>
 <body>
 
-<!-- Menu de navigation (responsive) -->
 <nav id="menu">
-    <ul>
-        <li data-destination="home">Accueil</li>
-        <li data-destination="about">À propos</li>
-        <li data-destination="projects">Projets</li>
-        <li data-destination="contact">Contact</li>
-    </ul>
+    <button id="menu-toggle" aria-label="Ouvrir le menu">Menu</button>
+    <div class="menu-content">
+        <ul>
+            <li data-destination="home">Accueil</li>
+            <li data-destination="about">À propos</li>
+            <li data-destination="projects">Projets</li>
+            <li data-destination="contact">Contact</li>
+        </ul>
+    </div>
 </nav>
 
 
