--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <button id="menu-toggle" aria-label="Ouvrir le menu">Menu</button>
     <div class="menu-content">
         <ul>
-            <li data-destination="home">Accueil</li>
-            <li data-destination="about">À propos</li>
+            <li data-destination="about">À propos de moi</li>
             <li data-destination="projects">Projets</li>
             <li data-destination="contact">Contact</li>
         </ul>
@@ -36,31 +35,81 @@
     <div class="landingContent">
         <h1 id="welcomeTitle">Bonjour, bienvenue sur mon portfolio !</h1>
         <p>
-            Ici, tu vas parcourir un chemin retraçant mon parcours, mes expériences et mes projets. Ce site te plonge dans un univers 3D où chaque recoin raconte un bout de mon histoire.
-            Prêt(e) à entrer dans l'aventure ? Clique sur le bouton ci-dessous pour découvrir tout ce qui t'attend !
+            Explorez mes projets dans un univers 3D que j’ai entièrement modélisé ! Belle aventure à vous !
         </p>
         <button id="enterSite">Entrer</button>
     </div>
 </div>
 
-<!-- Modal Accueil -->
-<div id="overlay-home" class="overlay hidden">
-    <div class="overlayContent">
-        <h2>Bienvenue sur mon chemin créatif !</h2>
-        <p>Je suis [ton nom], développeur et créateur. Explore ma route en 3D pour découvrir mon parcours et mes projets. Chaque panneau te raconte une étape de mon histoire.</p>
-        <button class="closeOverlay">Fermer</button>
+<!-- Pop-up d'instructions -->
+<div id="instructionsPopup" class="instructions-popup hidden">
+    <div class="instructions-content">
+        <h3>Comment jouer ?</h3>
+        <p>Déplace-toi sur la route et clique sur les panneaux pour en savoir plus !</p>
+        <ul>
+            <li><i class="fas fa-keyboard"></i> Q ou <i class="fas fa-arrow-left"></i> / D ou <i class="fas fa-arrow-right"></i> : Bouger à gauche/droite</li>
+            <li><i class="fas fa-arrow-up"></i> (Espace) : Sauter</li>
+            <li><i class="fas fa-running"></i> (Maintenir Shift) : Courir</li>
+            <li><i class="fas fa-mouse-pointer"></i> : Cliquer sur un panneau pour zoomer</li>
+            <li><i class="fas fa-mouse"></i> (Molette) : Zoomer dans la scène</li>
+        </ul>
+        <button class="close-popup">Compris !</button>
     </div>
 </div>
 
-<!-- Modal À propos -->
-<div id="overlay-about" class="overlay hidden">
+<!-- Modal À propos de moi -->
+<!-- Modal À propos de moi -->
+<div id="overlay-about-me" class="overlay hidden">
     <div class="overlayContent">
-        <h2>Qui suis-je ?</h2>
-        <p>J’ai commencé à coder à [âge/événement], fasciné par [ce qui t’a motivé].</p>
-        <p>Spécialisé en JS, Three.js, et design 3D, j’aime créer des expériences immersives.</p>
-        <p>Quand je ne code pas, je [hobby].</p>
-        <a href="[lien_cv]" target="_blank">Mon CV</a>
-        <button class="closeOverlay">Fermer</button>
+        <h2>À propos de moi</h2>
+        <img src="asset/images/moi.jpg" alt="Photo de moi" class="profile-img">
+        <div class="about-container">
+            <div class="about-section">
+                <h3>Mon parcours</h3>
+                <div class="timeline">
+                    <div class="timeline-item">
+                        <span class="timeline-year">2022</span>
+                        <span class="timeline-arrow">→</span>
+                        <p><i class="fas fa-laptop-code"></i> Bac Général avec option NSI (Numérique et Sciences Informatiques). C’est grâce à cette option que j’ai découvert le développement web.</p>
+                    </div>
+                    <div class="timeline-item">
+                        <span class="timeline-year">2022-2023</span>
+                        <span class="timeline-arrow">→</span>
+                        <p><i class="fas fa-graduation-cap"></i> Entrée en BUT MMI (Métiers du Multimédia et de l’Internet). Attiré initialement par le montage vidéo, j’ai été orienté vers cette formation par mon professeur de NSI. La première année, en tronc commun, m’a permis de développer des compétences en communication et en création audiovisuelle (Premiere Pro, Photoshop, Illustrator, After Effects).</p>
+                    </div>
+                    <div class="timeline-item">
+                        <span class="timeline-year">2023-2024</span>
+                        <span class="timeline-arrow">→</span>
+                        <p><i class="fas fa-code"></i> Deuxième année de BUT MMI. Spécialisation dans le développement web.</p>
+                    </div>
+                    <div class="timeline-item">
+                        <span class="timeline-year">2024</span>
+                        <span class="timeline-arrow">→</span>
+                        <p><i class="fas fa-cube"></i> Stage chez Ubiqua. Une entreprise de visites immersives qui m’a permis de découvrir la 3D avec Blender ! J’ai totalement accroché à ça !</p>
+                    </div>
+                    <div class="timeline-item">
+                        <span class="timeline-year">2024-2025</span>
+                        <span class="timeline-arrow">→</span>
+                        <p><i class="fas fa-briefcase"></i> Alternance chez Ubiqua en troisième année de BUT MMI. Consolidation de mes compétences en développement et modélisation 3D.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="separator"></div>
+            <div class="skills-section">
+                <h3>Mes compétences</h3>
+                <p>Grâce à mon BUT MMI et mes expériences professionnelles, j’ai acquis une solide maîtrise des outils suivants :</p>
+                <ul class="skills-list">
+                    <li><i class="fab fa-html5"></i> HTML</li>
+                    <li><i class="fab fa-css3-alt"></i> CSS</li>
+                    <li><i class="fab fa-js"></i> JavaScript</li>
+                    <li><i class="fab fa-java"></i> Java</li>
+                    <li><i class="fab fa-react"></i> React</li>
+                    <li><i class="fab fa-react"></i> React Native</li>
+                    <li><i class="fas fa-mobile-alt"></i> Android Studio</li>
+                </ul>
+            </div>
+        </div>
+        <button class="closeOverlay" aria-label="Fermer la fenêtre">Fermer</button>
     </div>
 </div>
 
@@ -129,6 +178,18 @@
     // Charger la configuration de particles.js depuis "asset/particles.json"
     particlesJS.load('particles-js', 'asset/particles.json', function() {
         console.log('callback - particles.js config loaded');
+    });
+
+    // Gestion du pop-up
+    document.getElementById('enterSite').addEventListener('click', function() {
+        document.getElementById('landingPage').classList.add('hidden');
+        setTimeout(() => {
+            document.getElementById('instructionsPopup').classList.remove('hidden');
+        }, 500);
+    });
+
+    document.querySelector('.close-popup').addEventListener('click', function() {
+        document.getElementById('instructionsPopup').classList.add('hidden');
     });
 
     // Masquer la page d'accueil lorsque l'utilisateur clique sur "Entrer"
